--- a/Components/Pages/Kontakte.razor
+++ b/Components/Pages/Kontakte.razor
@@ -29,7 +29,7 @@
     {
         new ContactModel { Name = "Jonas Gohr" },
         new ContactModel { Name = "Lui Teske" },
-        new ContactModel { Name = "Timo Prehn" },
+        new ContactModel { Name = "Timo Semmler" },
         new ContactModel { Name = "Colin Krummsee" },
         new ContactModel { Name = "Tim Liebe" }
     };
@@ -108,3 +108,4 @@
         color: #0d6efd;
     }
 </style>
+
